--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,6 @@
         "**/.factorypath": true
     },
     "java.project.referencedLibraries": [
-        "lib/**/*.jar",
-        "c:\\Users\\emanuel\\Desktop\\Tulio\\itextpdf-5.4.0.jar",
-        "dependencies/itextpdf-5.4.0.jar"
+        "business/report/dependencies/itextpdf-5.4.0.jar"
     ]
 }
